chore: Set package version to 0.0.1
Explicit version for initial development phase.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A Laravel package for managing hierarchical labels as a DAG with materialized path routes",
     "type": "library",
     "license": "MIT",
+    "version": "0.0.1",
     "authors": [
         {
             "name": "Nick Nisi",
